# UFOP

./: README.md
Banco de Dados 1/Tp 1/: PUBmin.xml
Computação Gráfica/TP-CG_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  level1  level2  resources.assets  sharedassets0.assets  sharedassets0.assets.resS  sharedassets1.resource  sharedassets2.assets.resS  sharedassets2.resource
Engenharia_software_1/Sprint05/: Makefile  config
Engenharia_software_1/Sprint06/: Makefile
Engenharia_software_1/Trabalho Em grupo/: template_especificacao_requisitos_v2_0_2019.docx
Estrutura de Dados 2/Exercicios/: ExArquivotxt.cpp  alunos.txt
Estrutura de Dados 2/GRID/: Unidade31.ppt  grid.cpp  grid.hpp  grid.rar  main.cpp
Grafos/Finas/: P1 E P2.docx
Grafos/Trabalho_1/: Lista_Adjacencia.cpp  MatrizAdjacencia.cpp
Grafos/Trabalho_2/: Busca_Largura.cpp  Busca_Largura_02.cpp  Busca_Profundidade.cpp
Grafos/Trabalho_3/: Dijkstra.cpp
Introdução_a_Otimização/TP/: Código antigo 1.txt  Código antigo.txt  TP.mod  TP.out  TPfinal.mod
Monografia_1/: Monografia1.ipynb
Organizacao_de_computadores/TP2-GRUPO/: CMakeLists.txt  blocoMemoria.cpp  blocoMemoria.hpp  endereco.hpp  geradorDeInstrucoes.cpp  instgen  instrucao.cpp  instrucoes.txt  main.cpp  maquina.cpp  maquina.hpp  mmu.cpp  mmu.hpp
Organizacao_de_computadores/tp2/: BlocoMemoria.cpp  BlocoMemoria.hpp  CMakeLists.txt  MMU.cpp  MMU.hpp  endereco.cpp  gerador  geradorDeInstrucoes.cpp  instrucao.cpp  instrucao.hpp  instrucoes.txt  main  main.cpp  teste_timer.cpp
Organizacao_de_computadores/tp3/: MMU.cpp  (+11 more)
(+2150 files in other folders)
